[C-2862] Fix clipped repost message text (#4025)

--- a/packages/web/src/components/Icon/Icon.module.css
+++ b/packages/web/src/components/Icon/Icon.module.css
@@ -2,6 +2,7 @@
   --icon-color: currentColor;
   --icon-size: var(--unit-4);
   width: var(--icon-size);
+  min-width: var(--icon-size);
   height: var(--icon-size);
 }
 
